# elem2design

./: .gitignore  README.md  pyproject.toml
app/: app.py
dataset/dataset/role/: crello_role.pkl
dataset/labeling/: test.py  train.py
dataset/src/: setup.py
dataset/src/common/: context.py  io.py  util.py
dataset/src/crello/: create_dataset.py  create_dataset_ablation.py  render.py  util.py
dataset/src/crello/config/: crello_v1.yaml
llava/: conversation.py
llava/infer/: infer.py  infer_ablation.py
llava/metrics/: layout.py  llava_ov.py  visualization.py
llava/model/: builder.py  llava_arch.py
llava/model/language_model/: llava_llama.py  llava_mistral.py
llava/model/multimodal_encoder/: clip_encoder.py
llava/train/: llava_trainer.py  train.py
scripts/: finetune.sh  finetune_lora.sh
