[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "e2d"
version = "1.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "torch==2.7.1", "torchvision==0.22.0",
    "transformers==4.50.0", "tokenizers==0.21.0", "sentencepiece==0.1.99", "shortuuid",
    "accelerate==0.34.2", "peft", "bitsandbytes",
    "pydantic", "markdown2[all]", "numpy==1.26.4", "scikit-learn==1.5.1",
    "requests", "httpx==0.24.0", "uvicorn", "fastapi",
    "einops==0.6.1", "einops-exts==0.0.4", "timm==0.6.13",
]

[project.optional-dependencies]
train = ["deepspeed==0.12.6", "ninja", "wandb==0.18.1"]
build = ["build", "twine"]

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*", "amlt*", "data*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*", "amlt*", "data*"]
